--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "react-quiz-app",
   "jest": {
+    "globals": {
+      "window": {},
+      "global":{}
+    },
+    "verbose": true,
+    "testURL": "http://localhost/",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
-    },
+    }, 
+    
+    "testEnvironment": "jsdom",
     "moduleNameMapper": {
           "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
           "\\.(css|less)$": "identity-obj-proxy"
@@ -56,7 +64,8 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^27.1.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "jest-environment-jsdom": "^27.0.6"
   }
 
 }
