--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "react-quiz-app",
   "jest": {
-    "globals": {
-      "window": {},
-      "global":{}
-    },
     "verbose": true,
     "testURL": "http://localhost/",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
-    }, 
-    
+    },
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
-          "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-          "\\.(css|less)$": "identity-obj-proxy"
-        
-      }
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "version": "0.1.0",
   "private": true,
@@ -39,11 +33,9 @@
     "test": "jest --watchAll",
     "eject": "react-scripts eject"
   },
- 
   "eslintConfig": {
     "extends": [
       "react-app"
-      
     ]
   },
   "browserslist": {
@@ -61,11 +53,12 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "babel-jest": "^27.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "jest": "^27.1.0",
+    "jest": "^26.6.0",
+    "jest-environment-jsdom": "^27.0.6",
     "react-test-renderer": "^17.0.2",
-    "jest-environment-jsdom": "^27.0.6"
+    "regenerator-runtime": "^0.13.9"
   }
-
 }
